fix alignment for footer, getting elements centered in taking padding out of footer .row

--- a/styles.css
+++ b/styles.css
@@ -1068,6 +1068,10 @@ header .row {
 
 /*FOOTER*/
 
+footer .row {
+    padding: 0;
+}
+
 .footer__blob--1 {
   position: absolute;
   top: 0;
